add remove popup after click

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,8 @@
 
 <body>
   <h4>YouTube Auto Click</h4>
-  <button id="toggle">Loading...</button>
+  <button id="autoContinueButton">Loading...</button>
+  <!-- <button id="autoSkipADS">Loading...</button> -->
   <script src="popup.js"></script>
 </body>
 
